[package]
name = "eeyore"
version = "0.1.0"
authors = ["Steve Klabnik <steve@steveklabnik.com>"]
description = "Not ready yet"
license = "MIT/Apache-2.0"

[dependencies]
hyper = "0.7.2"
hubcaps = "0.1.1"
iron = "0.2.6"
router = "0.1.0"
inth-oauth2 = "0.8.0"
oven = "0.2.16"
cookie = "0.2.2"
handlebars-iron = "0.12.0"
rustc-serialize = "0.3.18"
params = "0.0.3"