[package]
name = "eeyore"
version = "0.1.0"
authors = ["Steve Klabnik <steve@steveklabnik.com>"]
description = "Not ready yet"
license = "MIT/Apache-2.0"

[dependencies]
hyper = "*"
hubcaps = { git = "https://github.com/carols10cents/hubcaps", branch = "collabs" }
iron = "*"
router = "*"
inth-oauth2 = "*"
oven = "*"
cookie = "*"
handlebars-iron = "*"
rustc-serialize = "*"
params = "*"